fixed the index

--- a/index.html
+++ b/index.html
@@ -4,25 +4,21 @@
 		<meta charset="utf-8" />
 		<meta name="author" content="orem18kz" />
 		<title>Client-side Programming</title>
-		<!--<link rel="stylesheet" href="css/style.css" />
-		<script type="text/javascript" src="scripts/main.js"></script>-->
-		<link href="https://fonts.googleapis.com/css?family=Gentium+Basic:400,700" rel="stylesheet">
-		<style>
-			body {
-				font-family: 'Gentium Basic', serif;
-			}
-		</style
+		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<header>
 			<h1>Welcome to my assignments repository</h1>
 		</header>
-		<main>
+		<main id="sandbox">
 			<p><a href="../">Home</a> » Javascript
 			<ul id="tree">
 				<li><a href="a01/">Assignment  01</a></li>
 				<li><a href="a02/">Assignment  02</a></li>
 				<li><a href="a03/">Assignment  03</a></li>
+				<li><a href="a04/">Assignment  04</a></li>
+				<li><a href="a05/">Assignment  05</a></li>
 			</ul>
 		</main>
 		<footer>
