--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="author" content="orem18kz" />
+		<meta name="author" content="orem18kz[@]student,ju,se" />
 		<title>Client-side Programming</title>
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
 		<link rel="stylesheet" href="css/style.css" />
