--- a/a01/index.html
+++ b/a01/index.html
@@ -6,7 +6,7 @@
 		<title>Client-side Programming: Assignment 01.</title>
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
 		<link rel="stylesheet" href="css/style.css" />
-		<script src="scripts/script.js"></script>
+		<script src="scripts/scripts.js"></script>
 	</head>
 	<body>
 		<header>
