--- a/a04/index.html
+++ b/a04/index.html
@@ -6,8 +6,7 @@
 		<title>Client-side Programming: Assignment 04.</title>
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7COrbitron:400,900%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
 		<link href="style.css" rel="stylesheet" />
-		<!--<script src="scripts.js"></script>-->
-		<script src="scripts01.js"></script>
+		<script src="scripts.js"></script>
 	</head>
 	<body>
 		<header>
