--- a/a06/index.html
+++ b/a06/index.html
@@ -3,29 +3,23 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="author" content="orem18kz[@]student,ju,se" />
-		<title>Client-side Programming: Assignment 05.</title>
+		<title>Client-side Programming: Assignment 06.</title>
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
 		<link href="style.css" rel="stylesheet" />
 		<script src="scripts.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>The Jukebox Application</h1>
+			<h1>The Splitter application</h1>
 			<section>
 				<h2>Instructions</h2>
 				<ul>
-					<li>Click on the artist's name button to play a song.</li>
-					<li>Click on the "Add" button to add a new video to the playlist.</li>
+					<li>Click anywhere inside the test area to break the rectangles appart.</li>
 				</ul>
 			</section>
 		</header>
 		<main id="sandbox">
 			<h2>Test UI</h2>
-			<section id="controls"></section>
-			<div id="wrapper">
-				<div id="video"></div>
-				<div id="performer"></div>
-			</div>
 		</main>
 		<footer>
 			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info. </p>
