--- a/a05/index.html
+++ b/a05/index.html
@@ -19,7 +19,7 @@
 				</ul>
 			</section>
 		</header>
-		<main id="sandbox">
+		<main id="playground">
 			<h2>Test UI</h2>
 			<section id="controls"></section>
 			<div id="wrapper">
