--- a/a06/index.html
+++ b/a06/index.html
@@ -18,7 +18,7 @@
 				</ul>
 			</section>
 		</header>
-		<main id="sandbox">
+		<main id="playground">
 			<h2>Test UI</h2>
 		</main>
 		<footer>
