--- a/a02/index.html
+++ b/a02/index.html
@@ -19,7 +19,7 @@
 				</ul>
 			</section>
 		</header>
-		<main id="sandbox">
+		<main id="playground">
 			<h2>Test UI</h2>
 			<button id="start">Start</button>
 			<ul id="record"></ul>
