setting up sandbox

--- a/a06/index.html
+++ b/a06/index.html
@@ -4,9 +4,11 @@
 		<meta charset="utf-8" />
 		<meta name="author" content="orem18kz[@]student,ju,se" />
 		<title>Client-side Programming: Assignment 06.</title>
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
-		<link href="style.css" rel="stylesheet" />
-		<script src="scripts.js"></script>
+		<link href="css/style.css" rel="stylesheet" />
+		<script src="scripts/omerxa.js"></script>
+		<script src="scripts/scripts.js"></script>
 	</head>
 	<body>
 		<header>
@@ -20,9 +22,14 @@
 		</header>
 		<main id="playground">
 			<h2>Test UI</h2>
+			<div id="sandbox" class="v">
+				<div class="h" style="background-color:rgb(192,192,241)"></div>
+				<div class="h" style="background-color:rgb(241,192,241)"></div>
+			</div>
 		</main>
 		<footer>
 			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info. </p>
 		</footer>
+		<script src="scripts/omerxa.js"></script>
 	</body>
 </html>
