first attempt to solve

--- a/a06/index.html
+++ b/a06/index.html
@@ -22,9 +22,9 @@
 		</header>
 		<main id="playground">
 			<h2>Test UI</h2>
-			<div id="sandbox" class="v">
-				<div class="h" style="background-color:rgb(192,192,241)"></div>
-				<div class="h" style="background-color:rgb(241,192,241)"></div>
+			<div id="sandbox" class="h">
+				<div class="v" style="background-color:rgb(192,192,241)"></div>
+				<div class="v" style="background-color:rgb(241,192,241)"></div>
 			</div>
 		</main>
 		<footer>
