--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 		<main id="sandbox">
 			<p><a href="../">Home</a> » Javascript
 			<ul id="tree">
-				<li><a href="a01/">Assignment  01</a></li>
-				<li><a href="a02/">Assignment  02</a></li>
-				<li><a href="a03/">Assignment  03</a></li>
-				<li><a href="a04/">Assignment  04</a></li>
-				<li><a href="a05/">Assignment  05</a></li>
+				<li><a href="a01/">A-01: Guess the number</a></li>
+				<li><a href="a02/">A-02: The Hurdle Game</a></li>
+				<li><a href="a03/">A-03: The Maze</a></li>
+				<li><a href="a04/">A-04: The Coffeehouse app</a></li>
+				<li><a href="a05/">A-05: The Jukebox</a></li>
+				<li><a href="a06/">A-06: The Splitter</a></li>
 			</ul>
 		</main>
 		<footer>
