fixing some css and html

--- a/a06/index.html
+++ b/a06/index.html
@@ -12,11 +12,11 @@
 	</head>
 	<body>
 		<header>
-			<h1>The Splitter application</h1>
+			<h1>The Splitter</h1>
 			<section>
 				<h2>Instructions</h2>
 				<ul>
-					<li>Click anywhere inside the test area to break the rectangles appart.</li>
+					<li>Click anywhere inside the Test UI area to break the rectangles appart.</li>
 				</ul>
 			</section>
 		</header>
