--- a/a04/index.html
+++ b/a04/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>The Coffeehouse Application</h1>
+			<h1>The Coffeehouse app</h1>
 			<section>
 				<h2>Instructions</h2>
 				<ul>
