added paste bin https://pastebin.com/EQP6p0vV

--- a/a01/index.html
+++ b/a01/index.html
@@ -26,6 +26,7 @@
 			<button id="start">Start</button>
 			<ul id="record"></ul>
 			<div id="average">Average<span></span></div>
+			<script src="https://pastebin.com/embed_js/EQP6p0vV"></script>
 		</main>
 		<footer>
 			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info. </p>
