--- a/a02/index.html
+++ b/a02/index.html
@@ -34,7 +34,9 @@
 			</div>
 		</aside>
 		<footer>
-			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info. </p>
+			<p class="left"><a href="../a01/">« Lab01: Guess the number</a></p>
+			<p class="right"><a href="../a03/">Lab03: The Maze »</a></p>
+			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info</p>
 		</footer>
 	</body>
 </html>
