--- a/a03/index.html
+++ b/a03/index.html
@@ -33,7 +33,9 @@
 			</div>
 		</aside>
 		<footer>
-			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info. </p>
+			<p class="left"><a href="../a02/">« Lab02: The Hurdle Game</a></p>
+			<p class="right"><a href="../a04/">Lab04: The Coffeehouse app »</a></p>
+			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info</p>
 		</footer>
 	</body>
 </html>
