--- a/a04/index.html
+++ b/a04/index.html
@@ -48,7 +48,9 @@
 			</div>
 		</main>
 		<footer>
-			<p></p>
+			<p class="left"><a href="../a03/">« Lab03: The Maze</a></p>
+			<p class="right"><a href="../a05/">Lab05: The Jukebox »</a></p>
+			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info</p>
 		</footer>
 	</body>
 </html>
