--- a/a05/index.html
+++ b/a05/index.html
@@ -28,6 +28,8 @@
 			</div>
 		</main>
 		<footer>
+			<p class="left"><a href="../a04/">« Lab04: The Coffeehouse app</a></p>
+			<p class="right"><a href="../a06/">Lab06: The Splitter »</a></p>
 			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info. </p>
 		</footer>
 	</body>
