--- a/a01/index.html
+++ b/a01/index.html
@@ -36,7 +36,9 @@
 			</div>
 		</aside>
 		<footer>
-			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info. </p>
+			<p class="left"></p>
+			<p class="right"><a href="../a02/">Lab02: The Hurdle Game »</a></p>
+			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info.</p>
 		</footer>
 	</body>
 </html>
