finishing pagination htmlcss a01-a07; fixed the sourceCode area as well.

--- a/a01/index.html
+++ b/a01/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Guess the number app</h1>
+			<h1>Lab01: Guess the number app</h1>
 			<section>
 				<h2>Instructions</h2>
 				<ul>
@@ -28,6 +28,10 @@
 			<ul id="record"></ul>
 			<div id="average">Average<span></span></div>
 		</main>
+		<div id="pagination">
+			<p class="left"></p>
+			<p class="right"><a href="../a02/">Lab02: The Hurdle Game »</a></p>
+		</div>
 		<aside>
 			<h2>Source code</h2>
 			<p><a href="#js">JavaScript</a></p>
@@ -36,9 +40,7 @@
 			</div>
 		</aside>
 		<footer>
-			<p class="left"></p>
-			<p class="right"><a href="../a02/">Lab02: The Hurdle Game »</a></p>
-			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info.</p>
+			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info</p>
 		</footer>
 	</body>
 </html>
