--- a/a02/index.html
+++ b/a02/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>The Hurdle Game app</h1>
+			<h1>Lab02: The Hurdle Game app</h1>
 			<section>
 				<h2>Instructions</h2>
 				<ul>
@@ -26,6 +26,10 @@
 			<ul id="record"></ul>
 			<div id="average"><span></span></div>
 		</main>
+		<div id="pagination">
+			<p class="left"><a href="../a01/">« Lab01: Guess the number</a></p>
+			<p class="right"><a href="../a03/">Lab03: The Maze »</a></p>
+		</div>
 		<aside>
 			<h2>Source code</h2>
 			<p><a href="#js">JavaScript</a></p>
@@ -34,8 +38,6 @@
 			</div>
 		</aside>
 		<footer>
-			<p class="left"><a href="../a01/">« Lab01: Guess the number</a></p>
-			<p class="right"><a href="../a03/">Lab03: The Maze »</a></p>
 			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info</p>
 		</footer>
 	</body>
