--- a/a03/index.html
+++ b/a03/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>The Maze app</h1>
+			<h1>Lab03: The Maze app</h1>
 			<section>
 				<h2>Instructions</h2>
 				<ul>
@@ -25,6 +25,10 @@
 			<button id="start">Start</button>
 			<ul id="record"></ul>
 		</main>
+		<div id="pagination">
+			<p class="left"><a href="../a02/">« Lab02: The Hurdle Game</a></p>
+			<p class="right"><a href="../a04/">Lab04: The Coffeehouse app »</a></p>
+		</div>
 		<aside>
 			<h2>Source code</h2>
 			<p><a href="#js">JavaScript</a></p>
@@ -33,8 +37,6 @@
 			</div>
 		</aside>
 		<footer>
-			<p class="left"><a href="../a02/">« Lab02: The Hurdle Game</a></p>
-			<p class="right"><a href="../a04/">Lab04: The Coffeehouse app »</a></p>
 			<p>© MMXIX. All copyrights reserved. nmd.eozyo.info</p>
 		</footer>
 	</body>
