--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<li><a href="a04/">Lab04: The Coffeehouse app</a></li>
 				<li><a href="a05/">Lab05: The Jukebox</a></li>
 				<li><a href="a06/">Lab06: The Splitter</a></li>
+				<li><a href="a07/">Lab07: The Guessing Game</a></li>
 			</ul>
 		</main>
 		<footer>
