minor css changes

--- a/a01/index.html
+++ b/a01/index.html
@@ -29,7 +29,7 @@
 			<div id="average">Average<span></span></div>
 		</main>
 		<div id="pagination">
-			<p class="left"></p>
+			<p class="left"><a href="../">« Home</a></p>
 			<p class="right"><a href="../a02/">Lab02: The Hurdle Game »</a></p>
 		</div>
 		<aside>
