--- a/a05/index.html
+++ b/a05/index.html
@@ -5,7 +5,8 @@
 		<meta name="author" content="orem18kz[@]student,ju,se" />
 		<title>Client-side Programming: Assignment 05.</title>
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
-		<link href="style.css" rel="stylesheet" />
+		<link href="../css/common-style.css" rel="stylesheet"/>
+		<link href="css/style.css" rel="stylesheet" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="scripts.js"></script>
 	</head>
