--- a/a07/index.html
+++ b/a07/index.html
@@ -5,6 +5,7 @@
 		<meta name="author" content="orem18kz[@]student,ju,se" />
 		<title>Client-side Programming: Assignment 07.</title>
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
+		<link href="../css/common-style.css" rel="stylesheet"/>
 		<link href="css/style.css" rel="stylesheet" />
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="scripts/scripts.js"></script>
