minor htmlcss fixes

--- a/a07/index.html
+++ b/a07/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Lab07: The Gussing Game</h1>
+			<h1>Lab07: The Guessing Game</h1>
 			<section>
 				<h2>Instructions</h2>
 				<ul>
