--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		</main>
 		<footer>
 			<p>© MMXIX nmd.eozyo.info. All copyrights reserved.</p>
+			<!-- github -->
 		</footer>
 	</body>
 </html>
