--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</ul>
 		</main>
 		<footer>
-			<p>© MMXIX nmd.eozyo.info. All copyrights reserved.</p>
+			<p>© MMXIX <a href="http://nmd.eozyo.dev">nmd.eozyo.dev</a>. All copyrights reserved.</p>
 			<!-- github -->
 		</footer>
 	</body>
