--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		</main>
 		<footer>
 			<p>© MMXIX <a href="https://nmd.eozyo.dev">nmd.eozyo.dev</a>. All copyrights reserved.</p>
-			<!-- github -->
+			<!-- github <?php echo date("Y"); ?>-->
 		</footer>
 	</body>
 </html>
