--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 		<title>Client-side Programming</title>
 		<link href="https://fonts.googleapis.com/css?family=Dosis:400,800%7CGentium+Basic:400,700%7CMuli:600" rel="stylesheet" />
 		<link rel="stylesheet" href="css/style.css" />
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+    		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135408125-1"></script>
+    		<script>
+        		window.dataLayer = window.dataLayer || [];
+        		function gtag(){dataLayer.push(arguments);}
+        		gtag('js', new Date());
+          		gtag('config', 'UA-135408125-1');
+    		</script>
 	</head>
 	<body>
 		<header>
