--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</main>
 		<footer>
 			<p>© MMXIX <a href="https://nmd.eozyo.dev">nmd.eozyo.dev</a>. All copyrights reserved.</p>
-			<!-- github <?php echo date("Y"); ?>-->
+			<!-- github -->
 		</footer>
 	</body>
 </html>
