--- a/a07/index.html
+++ b/a07/index.html
@@ -23,7 +23,7 @@
 		<main id="playground">
 			<h2>Test UI</h2>
 			<div id="sandbox">
-				<input id="inputTag" type="number" autofocus="autofocus" /> <button id="validate" disabled="disabled">Validate</button>
+				<input id="inputTag" type="number" autofocus="autofocus"/><br /><button id="validate">Challenge</button>
 				<ul id="guessArea">
 					<li></li>
 					<li></li>
@@ -36,6 +36,23 @@
 					<li></li>
 					<li></li>
 				</ul>
+				<section id="stats">
+					<h3>Current Game Stats</h3>
+					<div class="flex">
+						<section>
+							<h4>Your Guess</h4>
+						</section>
+						<section>
+							<h4>Random</h4>
+						</section>
+						<section>
+							<h4>Points</h4>
+						</section>
+					</div>
+				</section>
+				<section id="record">
+					<h3>Record</h3>
+				</section>
 				<div id="random"></div>
 			</div>
 		</main>
